force-app/main/default/objects/Field_Tracking_Log__c/Field_Tracking_Log__c.object-meta.xml
<CustomObject>
    <label>Field Tracking Log</label>
    <nameField>
        <displayFormat>FTL-{0000}</displayFormat>
        <label>Field Tracking Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Tracking Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>