force-app/main/default/objects/Field_Tracking_Log__c/fields/Change_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Change_Date_Time__c</fullName>
    <description>Timestamp of the change.</description>
    <label>Change Date Time</label>
    <type>DateTime</type>
</CustomField>