force-app/main/default/objects/Field_Tracking_Log__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who triggered the change.</description>
    <label>Changed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Field_Tracking_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>