force-app/main/default/objects/Field_Tracking_Log__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>The API name or label of the field that changed.</description>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>