force-app/main/default/objects/Field_Tracking_Log__c/fields/Is_High_Priority__c.field-meta.xml
<CustomField>
    <fullName>Is_High_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this field is considered high priority</description>
    <label>Is High Priority?</label>
    <type>Checkbox</type>
</CustomField>