force-app/main/default/objects/Field_Tracking_Log__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <description>The API name of the object that was changed</description>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>