force-app/main/default/objects/Field_Tracking_Log__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>The Id of the record that changed</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>